<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BaseActivity">

    <Button
        android:id="@+id/button_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_a" />

    <Button
        android:id="@+id/button_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_b" />

    <Button
        android:id="@+id/button_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_c" />

    <Button
        android:id="@+id/button_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_d" />

    <Button
        android:id="@+id/button_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_x" />

    <Button
        android:id="@+id/button_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_y" />

    <Button
        android:id="@+id/button_z"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_z" />

    <TextView
        android:id="@+id/text_back_stack"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
